WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207722
Protect WebSWServerConnection::scheduleJobInServer from bad scopeURL
https://bugs.webkit.org/show_bug.cgi?id=207722
Summary
Protect WebSWServerConnection::scheduleJobInServer from bad scopeURL
youenn fablet
Reported
2020-02-13 14:53:00 PST
Protect WebSWServerConnection::scheduleJobInServer from bad scopeURL
Attachments
Patch
(2.74 KB, patch)
2020-02-13 15:27 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-02-13 15:00:21 PST
<
rdar://problem/58298067
>
youenn fablet
Comment 2
2020-02-13 15:27:59 PST
Created
attachment 390696
[details]
Patch
WebKit Commit Bot
Comment 3
2020-02-13 17:55:04 PST
Comment on
attachment 390696
[details]
Patch Clearing flags on attachment: 390696 Committed
r256578
: <
https://trac.webkit.org/changeset/256578
>
WebKit Commit Bot
Comment 4
2020-02-13 17:55:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug